tests/ui/attributes/no-mangle-closure.stderr
error: `#[no_mangle]` attribute cannot be used on closures
  --> $DIR/no-mangle-closure.rs:9:6
   |
LL |     (#[no_mangle] || y.0[0])()
   |      ^^^^^^^^^^^^
   |
   = help: `#[no_mangle]` can be applied to functions, methods, and statics

error: aborting due to 1 previous error

